@@ -16,8 +16,9 @@
 # limitations under the License.
 
 # -----------------------------------------------------------------------------
-#  Set JAVA_HOME or JRE_HOME if not already set and ensure any provided
-#  settings are valid and consistent with the selected start-up options.
+#  Set JAVA_HOME or JRE_HOME if not already set, ensure any provided settings
+#  are valid and consistent with the selected start-up options and set up the
+#  endorsed directory.
 # -----------------------------------------------------------------------------
 
 # Make sure prerequisite environment variables are set
@@ -76,12 +77,14 @@ if [ "$1" = "debug" ] ; then
   fi
 fi
 
-# Set standard commands for invoking Java, if not already set.
-if [ -z "$_RUNJAVA" ]; then
-  _RUNJAVA="$JRE_HOME"/bin/java
+# Don't override the endorsed dir if the user has set it previously
+if [ -z "$JAVA_ENDORSED_DIRS" ]; then
+  # Set the default -Djava.endorsed.dirs argument
+  JAVA_ENDORSED_DIRS="$CATALINA_HOME"/endorsed
 fi
+
+# Set standard commands for invoking Java.
+_RUNJAVA="$JRE_HOME"/bin/java
 if [ "$os400" != "true" ]; then
-  if [ -z "$_RUNJDB" ]; then
-    _RUNJDB="$JAVA_HOME"/bin/jdb
-  fi
+  _RUNJDB="$JAVA_HOME"/bin/jdb
 fi
